--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <title>Hello Today</title>
 </head>
 <body>
+    <p class="js-weather"></p>
+    <div class="momentum-wrapper">
     <div class="js-clock">
         <h1>0000</h1>
     </div>
@@ -15,11 +17,12 @@
         <input type="text" placeholder="What is your name?"/>
     </form>
     <h4 class="js-greetings greetings"></h4>
-    <form class="js-toDoForm">
+    <form class="js-toDoForm form">
         <input type="text" placeholder="Write a to do"/>
     </form>
     <ul class="js-toDoList"></ul>
-    <span class="js-weather"></span>
+    </div>
+    <footer><p class="js-place"></p></footer> 
     <script src="clock.js"></script>
     <script src="greeting.js"></script>
     <script src="todo.js"></script>
