--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <title>Hello Today</title>
 </head>
 <body>
+    <span class="js-date"></span>
     <p class="js-weather"></p>
     <div class="momentum-wrapper">
     <div class="js-clock">
